Fix again, deu zica3..

--- a/index.html
+++ b/index.html
@@ -64,16 +64,12 @@
         <p>A cada reunião inicial do dia, é um aprendizado novo e emoções com toda equipe e colegas, sempre temos alguma dinâmica em grupo para nos aproximar, e é algo que tem me ajudado a me soltar mais.</p>
         <p>É realmente uma experiência única, totalmente diferente de faculdades e cursos convencionais, eles não formam apenas profissionais, foram pessoas melhores.</p>
         </div>
-    </article>
-    <section>        
-    <aside id="lado-direito">  
-              
+    </article>           
+    <aside id="lado-direito">                
         <h4>Curiosidade</h4>         
-        <p>Na rotina de aprender a programar o esforço mental é enorme, passa-se o dia na frente do computador tentando explicar o que você quer fazer para a máquina.</p>
-                <p>Uma noite me peguei sonhando literalmente em estar conversando com o computador, e o mais bizarro é que ele me respondia.</p>
-    
+        <p>Aprender a programar é um esforço mental é enorme, passa-se o dia na frente do computador tentando explicar o que você quer fazer para a máquina.</p>
+                <p>Uma noite literalmente sonhei em estar conversando com o computador, e o mais bizarro é que ele me respondia.</p>    
     </aside>
-</section>
     <a id="link" href="https://www.youtube.com/watch?v=nG-miFeg2JI" target="_blank"><p id="corLink">Link</p></a>
     <section>
     <footer id="rodape">
