Fix again, deu zica5..

--- a/index.html
+++ b/index.html
@@ -68,8 +68,7 @@
     <section>          
     <aside id="lado-direito">                
         <h4>Curiosidade</h4>         
-        <p>Aprender a programar é um esforço mental é enorme, passa-se o dia na frente do computador tentando explicar o que você quer fazer para a máquina.</p>
-                <p>Uma noite literalmente sonhei em estar conversando com o computador, e o mais bizarro é que ele me respondia.</p>    
+        <p>Nam quis nulla. Integer malesuada. In in enim a arcu imperdiet malesuada. Sed vel lectus. Donec odio urna, tempus molestie, porttitor ut, iaculis quis</p>    
     </aside>
 </section>
     <a id="link" href="https://www.youtube.com/watch?v=nG-miFeg2JI" target="_blank"><p id="corLink">Link</p></a>
