Acrescentei a barra de navegaçao e as id do cabeçalho e titulo.

--- a/index.html
+++ b/index.html
@@ -9,11 +9,18 @@
 
 
 <body class="centered">
-    <header class="header">
-        <h1>Lições Aprendidas - Trybe!</h1>
-    </header>
-    
-    <footer>
+    <div id="cabecalho">
+        <header class="header">
+            <h1 id="titulo">Lições Aprendidas - Trybe!</h1>
+        </header>
+        <nav>
+            <ul>
+                <li> <a href="index.html">Home</a></li>
+                <li> <a href="https://www.trybe.com.br">Login</a></li>    
+            </ul>
+        </nav>
+    </div>
+        <footer>
         <p>Todos os direitos reservados, José Luiz Fagundes - Trybe</p>>
     </footer>>
 </body> 
