--- a/index.html
+++ b/index.html
@@ -57,18 +57,17 @@
         </nav> 
     </div> 
 </main> 
-    <article id="lado-esquerdo">  
-        <div class="lado-esquerdo">      
+    <article id="lado-esquerdo">                
         <h3>Aprendizado</h3>        
         <p>Minha jornada na Trybe começou melhor do que eu esperava, a ansiedade e nervosismo pelo início finalmente valeram a pena.</p>
         <p>A cada reunião inicial do dia, é um aprendizado novo e emoções com toda equipe e colegas, sempre temos alguma dinâmica em grupo para nos aproximar, e é algo que tem me ajudado a me soltar mais.</p>
-        <p>É realmente uma experiência única, totalmente diferente de faculdades e cursos convencionais, eles não formam apenas profissionais, foram pessoas melhores.</p>
-        </div>
+        <p>É realmente uma experiência única, totalmente diferente de faculdades e cursos convencionais, eles não formam apenas profissionais, foram pessoas melhores.</p>        
     </article> 
     <section>          
     <aside id="lado-direito">                
         <h4>Curiosidade</h4>         
-        <p>Nam quis nulla. Integer malesuada. In in enim a arcu imperdiet malesuada. Sed vel lectus. Donec odio urna, tempus molestie, porttitor ut, iaculis quis</p>    
+        <p>Programar exige um esforço mental enorme, passa-se o dia na frente do computador tentando explicar o que você quer fazer para a máquina.</p>
+        <p>Uma noite literalmente sonhei em estar conversando com o computador, e o mais bizarro é que ele me respondia</p>    
     </aside>
 </section>
     <a id="link" href="https://www.youtube.com/watch?v=nG-miFeg2JI" target="_blank"><p id="corLink">Link</p></a>
