--- a/index.html
+++ b/index.html
@@ -63,10 +63,9 @@
         <p>A cada reunião inicial do dia, é um aprendizado novo e emoções com toda equipe e colegas, sempre temos alguma dinâmica em grupo para nos aproximar, e é algo que tem me ajudado a me soltar mais.</p>
         <p>É realmente uma experiência única, totalmente diferente de faculdades e cursos convencionais, eles não formam apenas profissionais, foram pessoas melhores.</p>        
     </article> 
-    <section>          
+    <section id="lado-direito">          
     <aside id="lado-direito">                
-        <h4>Curiosidade</h4>         
-        <p>Programar exige um esforço mental enorme, passa-se o dia na frente do computador tentando explicar o que você quer fazer para a máquina.</p>
+        <h4>Curiosidade</h4>        
         <p>Uma noite literalmente sonhei em estar conversando com o computador, e o mais bizarro é que ele me respondia</p>    
     </aside>
 </section>
