--- a/index.html
+++ b/index.html
@@ -65,6 +65,12 @@
                             <td>CSS</td>
                             <td>JS</td>
                         </tr>
+                        <tr id="tabela-bold">
+                            <td> </td>
+                            <td> </td>
+                            <td> </td>
+                            <td> </td>
+                        </tr>
                         <tr>
                             <td>cp</td>
                             <td>img</td>
