--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <p>É realmente uma experiência única, totalmente diferente de faculdades e cursos convencionais, eles não formam apenas profissionais, foram pessoas melhores.</p>        
     </article> 
     <section>          
-    <aside class="lado-esquerdo">                
+    <aside class="lado-direito">                
         <h4>Curiosidade</h4>        
         <p>Uma noite literalmente sonhei em estar conversando com o computador, e o mais bizarro é que ele me respondia</p>    
     </aside>
