--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
         <p>A cada reunião inicial do dia, é um aprendizado novo e emoções com toda equipe e colegas, sempre temos alguma dinâmica em grupo para nos aproximar, e é algo que tem me ajudado a me soltar mais.</p>
         <p>É realmente uma experiência única, totalmente diferente de faculdades e cursos convencionais, eles não formam apenas profissionais, foram pessoas melhores.</p>        
     </article> 
-    <section>          
-    <aside class="lado-direito">                
+    <section class="lado-direito">          
+    <aside>                
         <h4>Curiosidade</h4>        
         <p>Uma noite literalmente sonhei em estar conversando com o computador, e o mais bizarro é que ele me respondia</p>    
     </aside>
