--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
         </nav> 
     </div> 
 </main> 
+   <div id="desnecessária">
     <article class="lado-esquerdo">                
         <h3>Aprendizado</h3>        
         <p>Minha jornada na Trybe começou melhor do que eu esperava, a ansiedade e nervosismo pelo início finalmente valeram a pena.</p>
@@ -64,11 +65,12 @@
         <p>É realmente uma experiência única, totalmente diferente de faculdades e cursos convencionais, eles não formam apenas profissionais, foram pessoas melhores.</p>        
     </article> 
     <section class="lado-direito">          
-    <aside>                
-        <h4>Curiosidade</h4>        
-        <p>Uma noite literalmente sonhei em estar conversando com o computador, e o mais bizarro é que ele me respondia</p>    
-    </aside>
+        <aside>                
+            <h4>Curiosidade</h4>        
+            <p>Uma noite literalmente sonhei em estar conversando com o computador, e o mais bizarro é que ele me respondia</p>    
+        </aside>
 </section>
+    </div>
     <a id="link" href="https://www.youtube.com/watch?v=nG-miFeg2JI" target="_blank"><p id="corLink">Link</p></a>
     
     <footer id="rodape">
