--- a/index.html
+++ b/index.html
@@ -66,10 +66,10 @@
                             <td>JS</td>
                         </tr>
                         <tr>
-                            <td> </td>
-                            <td> </td>
-                            <td> </td>
-                            <td> </td>
+                            <td>&nbsp</td>
+                            <td>&nbsp</td>
+                            <td>&nbsp</td>
+                            <td>&nbsp</td>
                         </tr>
                         <tr>
                             <td>cp</td>
