Finalente finalizado para entrega

--- a/index.html
+++ b/index.html
@@ -105,14 +105,13 @@
             </div>
             <article class="artigo">
                 <h2>Sobre o aprendizado na Trybe</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora eius, deleniti aliquid facilis corporis voluptate voluptatum nobis illo laborum quae sapiente dolores ipsa vero nesciunt? Laboriosam aspernatur et reprehenderit debitis.</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora eius, deleniti aliquid facilis corporis voluptate voluptatum nobis illo laborum quae sapiente dolores ipsa vero nesciunt? Laboriosam aspernatur et reprehenderit debitis.</p>
+                <p>O aprendizado na Trybe tem sido uma experiência muito gratificante e muito diferente de tudo que já vivenciei em todo esse tempo da área de TI.  Sempre tive muita facilidade para aprender qualquer  assunto relacionado com programação, mas confesso que fiquei um pouco assustado com a metodologia ativa, pois ela é muito intensa e não permite que você fique em uma zona de conforto. Incrivelmente por mais que o progresso aparente ser lento só tive a dimensão do quanto aprendi quando necessitei aplicar em um projeto.</p>
             </article>
         </section>
         <section class="section-inline-block">
             <aside class="passagem">
                 <h3>Passagem</h3>
-                <span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora eius, deleniti aliquid facilis corporis voluptate voluptatum nobis illo laborum quae sapiente dolores ipsa vero nesciunt? Laboriosam aspernatur et reprehenderit debitis.</span>
+                <span>O que acho incrível é a troca de experiencias, somos mais de cem pessoas entre alunos e profissionais da Trybe, cada um vivendo em um local do Brasil e até mesmo alguns em outros países, sendo que cada indivíduo possui uma realidade diferente do outro, mas no final estamos todos no mesmo barco.</span>
             </aside>
         </section>
     </main>
