--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
         <section class="section-inline-block">
             <aside class="passagem">
                 <h3>Passagem</h3>
-                <span>O que acho incrível é a troca de experiencias, somos mais de cem pessoas entre alunos e profissionais da Trybe, cada um vivendo em um local do Brasil e até mesmo alguns em outros países, sendo que cada indivíduo possui uma realidade diferente do outro, mas no final estamos todos no mesmo barco.</span>
+                <span>O incrível é a troca de experiencias, somos mais de cem pessoas entre alunos e profissionais da Trybe, cada um vivendo em um local do Brasil e até mesmo alguns em outros países, sendo que cada indivíduo possui uma realidade diferente do outro, mas no final estamos todos no mesmo barco.</span>
             </aside>
         </section>
     </main>
