Imagem de Perfil acrescentado ao site

--- a/index.html
+++ b/index.html
@@ -20,6 +20,27 @@
             </ul>
         </nav>
     </div>
+    <div>
+        <img src="2019-05-27.png">
+    </div>
+    <div>
+        <h2>Lições</h2>
+        <ol>
+            <li>Unix</li>
+            <li>Git</li>
+            <li>GitHub</li>
+            <li>1. Unix</li>
+            <li>1. Unix</li>
+            <li>1. Unix</li>
+            <li>1. Unix</li>
+            <li>1. Unix</li>
+            <li>1. Unix</li>
+            <li>1. Unix</li>                                                                                                                                                                                     
+            <li>1. Unix</li>
+            <li>1. Unix</li>
+        </ol>
+    </div>
+
         <footer>
         <p>Todos os direitos reservados, José Luiz Fagundes - Trybe</p>>
     </footer>>
