--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </nav>
     </div>
     <div>
-        <img src="2019-05-27.png">
+        <img id="minha_foto" src="2019-05-27.png">
     </div>
     <div>
         <h2>Lições</h2>
@@ -29,13 +29,13 @@
             <li>Unix</li>
             <li>Git</li>
             <li>GitHub</li>
-            <li>1. Unix</li>
-            <li>1. Unix</li>
-            <li>1. Unix</li>
-            <li>1. Unix</li>
-            <li>1. Unix</li>
-            <li>1. Unix</li>
-            <li>1. Unix</li>                                                                                                                                                                                     
+            <li>Empatia</li>
+            <li>HTML</li>
+            <li>CSS</li>
+            <li>Slack</li>
+            <li>Zoom</li>
+            <li>Inspect</li>
+            <li>Semantic HTML</li>                                                                                                                                                                                     
             <li>1. Unix</li>
             <li>1. Unix</li>
         </ol>
