Acrescentado ao site a segunda lista

--- a/index.html
+++ b/index.html
@@ -40,8 +40,21 @@
             <li>1. Unix</li>
         </ol>
     </div>
-
-        <footer>
+    <div>
+        <ul>
+            <li>Java Script</li>
+            <li>DOM</li>
+            <li>Forms</li>
+            <li>CSS Responsive</li>
+            <li>ES6</li>
+            <li>HOF</li>
+            <li>Unit Tests</li>
+            <li>React</li>
+            <li>Node</li>
+            <li>SQL</li>
+        </ul>
+    </div>   
+    <footer>
         <p>Todos os direitos reservados, José Luiz Fagundes - Trybe</p>>
     </footer>>
 </body> 
