--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </div>
     <div>
         <h2>Lições</h2>
-        <ol>
+        <ol id="licoes_aprendeidas">
             <li>Unix</li>
             <li>Git</li>
             <li>GitHub</li>
@@ -41,7 +41,7 @@
         </ol>
     </div>
     <div>
-        <ul>
+        <ul id="licoes_a_aprender">
             <li>Java Script</li>
             <li>DOM</li>
             <li>Forms</li>
@@ -53,8 +53,14 @@
             <li>Node</li>
             <li>SQL</li>
         </ul>
-    </div>   
-    <footer>
+    </div>
+    <div>
+        <article>
+            <p>O curso tem proporcionado ótimas experiencias para mim e acredito que para todos os alunos da turma 9, estou impressionado com a qualidade de ensino e o suporte ao aluno que a trybe oferece e entrega, o fato de tratar com respeito questões ligadas a saúde fisica e mental dos alunos, faz com que no meu caso procure se esforçar mais para aprender e entregar o que solicitado. Cada vez mais estou priorizando o meu aprendizado e o tempo que preciso dispor para aprender com qualidade, ou seja, fazer a minha parte, me espelhando nos profissionais da trybe que fazem sua parte com excelência.
+            </p>
+        </article>
+    </div>
+    <footer id="rodape">
         <p>Todos os direitos reservados, José Luiz Fagundes - Trybe</p>>
     </footer>>
 </body> 
