Foi acrescentado ao site uma sessao sobre uma passagem do meu aprendizado

--- a/index.html
+++ b/index.html
@@ -60,6 +60,11 @@
             </p>
         </article>
     </div>
+    <div>
+        <aside>
+            <p>Durante este primeiro mes de aprendizado, tive ótimas experiencias, uma delas foi conhecer e poder conversar com outros alunos durante as salas reduzidas, onde conheci pessoas que me inspiraram a fazer mais pelo próximo</p>
+        </aside>
+    </div>
     <footer id="rodape">
         <p>Todos os direitos reservados, José Luiz Fagundes - Trybe</p>>
     </footer>>
