Acrescentado o link externo

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </nav>
     </div>
     <div>
-        <img id="minha_foto" src="2019-05-27.png">
+        <img id="minha_foto" src="2019-05-27.png" alt="Minha oto">
     </div>
     <div>
         <h2>Lições</h2>
@@ -35,7 +35,7 @@
             <li>Slack</li>
             <li>Zoom</li>
             <li>Inspect</li>
-            <li>Semantic HTML</li>                                                                                                                                                                                     
+            <li>Semantic HTML</li> 
             <li>1. Unix</li>
             <li>1. Unix</li>
         </ol>
@@ -56,17 +56,19 @@
     </div>
     <div>
         <article>
-            <p>O curso tem proporcionado ótimas experiencias para mim e acredito que para todos os alunos da turma 9, estou impressionado com a qualidade de ensino e o suporte ao aluno que a trybe oferece e entrega, o fato de tratar com respeito questões ligadas a saúde fisica e mental dos alunos, faz com que no meu caso procure se esforçar mais para aprender e entregar o que solicitado. Cada vez mais estou priorizando o meu aprendizado e o tempo que preciso dispor para aprender com qualidade, ou seja, fazer a minha parte, me espelhando nos profissionais da trybe que fazem sua parte com excelência.
+            <p>O Curso tem proporcionado ótimas experiencias para mim e acredito que para todos os alunos da turma 9, estou impressionado com a qualidade de ensino e o suporte ao aluno que a trybe oferece e entrega, o fato de tratar com respeito questões ligadas a saúde fisica e mental dos alunos, faz com que no meu caso procure se esforçar mais para aprender e entregar o que solicitado. Cada vez mais estou priorizando o meu aprendizado e o tempo que preciso dispor para aprender com qualidade, ou seja, fazer a minha parte, me espelhando nos profissionais da trybe que fazem sua parte com excelência.
             </p>
         </article>
     </div>
     <div>
         <aside>
-            <p>Durante este primeiro mes de aprendizado, tive ótimas experiencias, uma delas foi conhecer e poder conversar com outros alunos durante as salas reduzidas, onde conheci pessoas que me inspiraram a fazer mais pelo próximo</p>
+            <h4><em>"Durante este primeiro mes de aprendizado, tive ótimas experiencias, uma delas foi conhecer e poder conversar com outros alunos durante as salas reduzidas, onde conheci pessoas que me inspiraram a fazer mais pelo próximo"
+            </em></h4>
+            <a href="https://www.betrybe.com/formacao" target="_blank">Faça o download do curriculo da nossa formação</a>
         </aside>
     </div>
     <footer id="rodape">
-        <p>Todos os direitos reservados, José Luiz Fagundes - Trybe</p>>
-    </footer>>
+        <p>Todos os direitos reservados, José Luiz Fagundes - Trybe</p>
+    </footer>
 </body> 
 </html>
