--- a/index.html
+++ b/index.html
@@ -8,20 +8,19 @@
 </head>
 
 
-<body class="centered">
-    <div id="cabecalho">
-        <header class="header">
+<body>
+        <header id="cabecalho">
             <h1 id="titulo">Lições Aprendidas - Trybe!</h1>
+            <nav>
+                <ul>
+                    <a href="index.html">Home</a>
+                    <a href="https://www.trybe.com.br">Login</a>
+                </ul>
+            </nav>
         </header>
-        <nav>
-            <ul>
-                <li> <a href="index.html">Home</a></li>
-                <li> <a href="https://www.trybe.com.br">Login</a></li>    
-            </ul>
-        </nav>
-    </div>
     <div>
-        <img id="minha_foto" src="2019-05-27.png" alt="Minha oto">
+        <img id="minha_foto" src="2019-05-27.png" alt="Minha Foto">
+        <h6>José Luiz Fagundes</h6>
     </div>
     <div>
         <h2>Lições</h2>
