--- a/index.html
+++ b/index.html
@@ -9,21 +9,21 @@
 
 
 <body>
-        <header id="cabecalho">
-            <h1 id="titulo">Lições Aprendidas - Trybe!</h1>
-            <nav>
-                <ul>
-                    <a href="index.html">Home</a>
-                    <a href="https://www.trybe.com.br">Login</a>
-                </ul>
-            </nav>
-        </header>
+    <header id="cabecalho">
+        <h1 id="titulo">Lições Aprendidas - Trybe!</h1>
+        <nav>
+            <ul>
+                <a href="index.html">Home</a>
+                <a href="https://www.trybe.com.br">Login</a>
+            </ul>
+        </nav>
+    </header>
     <div>
         <img id="minha_foto" src="2019-05-27.png" alt="Minha Foto">
         <h6>José Luiz Fagundes</h6>
     </div>
     <div>
-        <h2>Lições</h2>
+        <h2 class="font-verde">Lições</h2>
         <ol id="licoes_aprendeidas">
             <li>Unix</li>
             <li>Git</li>
@@ -40,7 +40,7 @@
         </ol>
     </div>
     <div>
-        <ul id="licoes_a_aprender">
+        <ul id="licoes_a_aprender" class="font-verde">
             <li>Java Script</li>
             <li>DOM</li>
             <li>Forms</li>
@@ -53,19 +53,15 @@
             <li>SQL</li>
         </ul>
     </div>
-    <div>
-        <article>
-            <p>O Curso tem proporcionado ótimas experiencias para mim e acredito que para todos os alunos da turma 9, estou impressionado com a qualidade de ensino e o suporte ao aluno que a trybe oferece e entrega, o fato de tratar com respeito questões ligadas a saúde fisica e mental dos alunos, faz com que no meu caso procure se esforçar mais para aprender e entregar o que solicitado. Cada vez mais estou priorizando o meu aprendizado e o tempo que preciso dispor para aprender com qualidade, ou seja, fazer a minha parte, me espelhando nos profissionais da trybe que fazem sua parte com excelência.
-            </p>
-        </article>
-    </div>
-    <div>
-        <aside>
-            <h4><em>"Durante este primeiro mes de aprendizado, tive ótimas experiencias, uma delas foi conhecer e poder conversar com outros alunos durante as salas reduzidas, onde conheci pessoas que me inspiraram a fazer mais pelo próximo"
-            </em></h4>
-            <a href="https://www.betrybe.com/formacao" target="_blank">Faça o download do curriculo da nossa formação</a>
-        </aside>
-    </div>
+    <article>
+        <p>O Curso tem proporcionado ótimas experiencias para mim e acredito que para todos os alunos da turma 9, estou impressionado com a qualidade de ensino e o suporte ao aluno que a trybe oferece e entrega, o fato de tratar com respeito questões ligadas a saúde fisica e mental dos alunos, faz com que no meu caso procure se esforçar mais para aprender e entregar o que solicitado. Cada vez mais estou priorizando o meu aprendizado e o tempo que preciso dispor para aprender com qualidade, ou seja, fazer a minha parte, me espelhando nos profissionais da trybe que fazem sua parte com excelência.
+        </p>
+    </article>
+    <aside>
+        <h4 class="font-verde"><em>"Durante este primeiro mes de aprendizado, tive ótimas experiencias, uma delas foi conhecer e poder conversar com outros alunos durante as salas reduzidas, onde conheci pessoas que me inspiraram a fazer mais pelo próximo"
+        </em></h4>
+        <a href="https://www.betrybe.com/formacao" target="_blank">Faça o download do curriculo da nossa formação</a>
+    </aside>
     <footer id="rodape">
         <p>Todos os direitos reservados, José Luiz Fagundes - Trybe</p>
     </footer>
