--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <h1 id="titulo">A estrada até aqui...</h1>
     </header>
     <aside class="aside-left">
-        <img id="minha_foto" src="my-picture.jpeg" alt="Jovem sorridente, largo sorriso branco e olhos enrrugados e cabelos negros" class="my-image">
+        <!-- <img id="minha_foto" src="my-picture.jpeg" alt="Jovem sorridente, largo sorriso branco e olhos enrrugados e cabelos negros" class="my-image"> -->
         <ol id="licoes_aprendidas">
             <h2>Lições Aprendidas</h2>
             <li>Linux</li>
