Listas colocadas uma ao lado da outra

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
 <body>
     <header id="cabecalho">
+        <br>
         <h1 id="titulo">Lições Aprendidas - Trybe!</h1>
         <nav>
             <ul>
@@ -18,40 +19,41 @@
             </ul>
         </nav>
     </header>
-    <div>
+    <div id="perfil">
         <img id="minha_foto" src="2019-05-27.png" alt="Minha Foto">
-        <h6>José Luiz Fagundes</h6>
+        <h6><em>José Luiz Fagundes<br>Estudante Trybe</em></h6>
     </div>
-    <div>
-        <h2 class="font-verde">Lições</h2>
-        <ol id="licoes_aprendeidas">
-            <li>Unix</li>
-            <li>Git</li>
-            <li>GitHub</li>
-            <li>Empatia</li>
-            <li>HTML</li>
-            <li>CSS</li>
-            <li>Slack</li>
-            <li>Zoom</li>
-            <li>Inspect</li>
-            <li>Semantic HTML</li> 
-            <li>1. Unix</li>
-            <li>1. Unix</li>
-        </ol>
-    </div>
-    <div>
-        <ul id="licoes_a_aprender" class="font-verde">
-            <li>Java Script</li>
-            <li>DOM</li>
-            <li>Forms</li>
-            <li>CSS Responsive</li>
-            <li>ES6</li>
-            <li>HOF</li>
-            <li>Unit Tests</li>
-            <li>React</li>
-            <li>Node</li>
-            <li>SQL</li>
-        </ul>
+    <div id="listas">
+        <div class="list">
+            <h2 class="font-verde">Lições Aprendidas</h2>
+            <ol id="licoes_aprendidas">
+                <li>Unix</li>
+                <li>Git</li>
+                <li>GitHub</li>
+                <li>Empatia</li>
+                <li>HTML</li>
+                <li>CSS</li>
+                <li>Slack</li>
+                <li>Zoom</li>
+                <li>Inspect</li>
+                <li>Semantic HTML</li> 
+            </ol>
+        </div>
+        <div class="list">
+            <h2 class="font-verde">Lições a Aprender</h2>
+            <ul id="licoes_a_aprender" class="font-verde">
+                <li>Java Script</li>
+                <li>DOM</li>
+                <li>Forms</li>
+                <li>CSS Responsive</li>
+                <li>ES6</li>
+                <li>HOF</li>
+                <li>Unit Tests</li>
+                <li>React</li>
+                <li>Node</li>
+                <li>SQL</li>
+            </ul>
+        </div>
     </div>
     <article>
         <p>O Curso tem proporcionado ótimas experiencias para mim e acredito que para todos os alunos da turma 9, estou impressionado com a qualidade de ensino e o suporte ao aluno que a trybe oferece e entrega, o fato de tratar com respeito questões ligadas a saúde fisica e mental dos alunos, faz com que no meu caso procure se esforçar mais para aprender e entregar o que solicitado. Cada vez mais estou priorizando o meu aprendizado e o tempo que preciso dispor para aprender com qualidade, ou seja, fazer a minha parte, me espelhando nos profissionais da trybe que fazem sua parte com excelência.
