corrigindo a localizaçao da tag header

--- a/index.html
+++ b/index.html
@@ -5,10 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>José Luiz Fagundes - Lições Aprendidas - Trybe</title>
     <link rel="stylesheet" href="style.css">
-</head>
-
-
-<body>
     <header id="cabecalho">
         <br>
         <h1 id="titulo">Lições Aprendidas - Trybe!</h1>
@@ -19,6 +15,10 @@
             </ul>
         </nav>
     </header>
+</head>
+
+
+<body>
     <div id="perfil">
         <img id="minha_foto" src="2019-05-27.png" alt="Minha Foto">
         <h6><em>José Luiz Fagundes<br>Estudante Trybe</em></h6>
@@ -26,6 +26,7 @@
     <div id="listas">
         <div class="list">
             <h2 class="font-verde">Lições Aprendidas</h2>
+            <br>
             <ol id="licoes_aprendidas">
                 <li>Unix</li>
                 <li>Git</li>
@@ -41,6 +42,7 @@
         </div>
         <div class="list">
             <h2 class="font-verde">Lições a Aprender</h2>
+            <br>
             <ul id="licoes_a_aprender" class="font-verde">
                 <li>Java Script</li>
                 <li>DOM</li>
@@ -55,11 +57,11 @@
             </ul>
         </div>
     </div>
-    <article>
+    <article class="coments">
         <p>O Curso tem proporcionado ótimas experiencias para mim e acredito que para todos os alunos da turma 9, estou impressionado com a qualidade de ensino e o suporte ao aluno que a trybe oferece e entrega, o fato de tratar com respeito questões ligadas a saúde fisica e mental dos alunos, faz com que no meu caso procure se esforçar mais para aprender e entregar o que solicitado. Cada vez mais estou priorizando o meu aprendizado e o tempo que preciso dispor para aprender com qualidade, ou seja, fazer a minha parte, me espelhando nos profissionais da trybe que fazem sua parte com excelência.
         </p>
     </article>
-    <aside>
+    <aside class="coments">
         <h4 class="font-verde"><em>"Durante este primeiro mes de aprendizado, tive ótimas experiencias, uma delas foi conhecer e poder conversar com outros alunos durante as salas reduzidas, onde conheci pessoas que me inspiraram a fazer mais pelo próximo"
         </em></h4>
         <a href="https://www.betrybe.com/formacao" target="_blank">Faça o download do curriculo da nossa formação</a>
