Correçao na position do cabecalho

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <header id="cabecalho">
         <br>
+        <br>
         <h1 id="titulo">Lições Aprendidas - Trybe!</h1>
         <nav>
             <ul>
@@ -57,11 +58,11 @@
             </ul>
         </div>
     </div>
-    <article class="coments">
+    <article class="coments-left">
         <p>O Curso tem proporcionado ótimas experiencias para mim e acredito que para todos os alunos da turma 9, estou impressionado com a qualidade de ensino e o suporte ao aluno que a trybe oferece e entrega, o fato de tratar com respeito questões ligadas a saúde fisica e mental dos alunos, faz com que no meu caso procure se esforçar mais para aprender e entregar o que solicitado. Cada vez mais estou priorizando o meu aprendizado e o tempo que preciso dispor para aprender com qualidade, ou seja, fazer a minha parte, me espelhando nos profissionais da trybe que fazem sua parte com excelência.
         </p>
     </article>
-    <aside class="coments">
+    <aside class="coments-right">
         <h4 class="font-verde"><em>"Durante este primeiro mes de aprendizado, tive ótimas experiencias, uma delas foi conhecer e poder conversar com outros alunos durante as salas reduzidas, onde conheci pessoas que me inspiraram a fazer mais pelo próximo"
         </em></h4>
         <a href="https://www.betrybe.com/formacao" target="_blank">Faça o download do curriculo da nossa formação</a>
