--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <br>
         <br>
         <h1 id="titulo">Lições Aprendidas - Trybe!</h1>
-        <nav>
+        <nav id="menu">
             <ul>
                 <a href="index.html">Home</a>
                 <a href="https://www.trybe.com.br">Login</a>
@@ -20,11 +20,11 @@
 
 
 <body>
-    <div id="perfil">
+    <section id="perfil">
         <img id="minha_foto" src="2019-05-27.png" alt="Minha Foto">
         <h6><em>José Luiz Fagundes<br>Estudante Trybe</em></h6>
-    </div>
-    <div id="listas">
+    </section>
+    <section id="listas">
         <div class="list">
             <h2 class="font-verde">Lições Aprendidas</h2>
             <br>
@@ -57,16 +57,18 @@
                 <li>SQL</li>
             </ul>
         </div>
-    </div>
+    </section>
     <article class="coments-left">
+        <h3 class="font-verde">Sobre o meu aprendizado</h3>
         <p>O Curso tem proporcionado ótimas experiencias para mim e acredito que para todos os alunos da turma 9, estou impressionado com a qualidade de ensino e o suporte ao aluno que a trybe oferece e entrega, o fato de tratar com respeito questões ligadas a saúde fisica e mental dos alunos.
         </p>
     </article>
     <aside class="coments-right">
-        <h4 class="font-verde"><em>"Durante este primeiro mes de aprendizado, tive ótimas experiencias, uma delas foi conhecer e poder conversar com outros alunos durante as salas reduzidas, onde conheci pessoas que me inspiraram a fazer mais pelo próximo"
-        </em></h4>
-        <a href="https://www.betrybe.com/formacao" target="_blank">Faça o download do curriculo da nossa formação</a>
+        <h3 class="font-verde">Uma passagem sobre meu aprendizado</h3>
+        <p class="font-verde"><em>"Durante este primeiro mes de aprendizado, tive ótimas experiencias, uma delas foi conhecer e poder conversar com outros alunos durante as salas reduzidas, onde conheci pessoas que me inspiraram a fazer mais pelo próximo"
+        </em></p>
     </aside>
+    <a href="https://www.betrybe.com/formacao" target="_blank">Faça o download do curriculo da nossa formação</a>
     <footer id="rodape">
         <p>Todos os direitos reservados, José Luiz Fagundes - Trybe</p>
     </footer>
