alteraçoes na semantica section no article e aside

--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
 <body>
     <section id="perfil">
         <img id="minha_foto" src="2019-05-27.png" alt="Minha Foto">
-        <h6><em>José Luiz Fagundes<br>Estudante Trybe</em></h6>
+        <p><em>José Luiz Fagundes<br>Estudante Trybe</em></p>
     </section>
     <section id="listas">
-        <div class="list">
+        <Section class="list">
             <h2 class="font-verde">Lições Aprendidas</h2>
             <br>
             <ol id="licoes_aprendidas">
@@ -40,8 +40,8 @@
                 <li>Inspect</li>
                 <li>Semantic HTML</li> 
             </ol>
-        </div>
-        <div class="list">
+        </section>
+        <section class="list">
             <h2 class="font-verde">Lições a Aprender</h2>
             <br>
             <ul id="licoes_a_aprender" class="font-verde">
@@ -56,18 +56,24 @@
                 <li>Node</li>
                 <li>SQL</li>
             </ul>
+        </section>
+    </section>
+    <section id="coments">
+        <div class="list">
+            <article>
+                <h3 class="font-verde">Sobre o meu aprendizado</h3>
+                <p>O Curso tem proporcionado ótimas experiencias para mim e acredito que para todos os alunos da turma 9, estou impressionado com a qualidade de ensino e o suporte ao aluno que a trybe oferece e entrega, o fato de tratar com respeito questões ligadas a saúde fisica e mental dos alunos.
+                </p>
+            </article>
+        </div>
+        <div class="list">
+            <aside>
+                <h3 class="font-verde">Uma passagem sobre meu aprendizado</h3>
+                <p class="font-verde"><em>"Durante este primeiro mes de aprendizado, tive ótimas experiencias, uma delas foi conhecer e poder conversar com outros alunos durante as salas reduzidas, onde conheci pessoas que me inspiraram a fazer mais pelo próximo"
+                </em></p>
+            </aside>
         </div>
     </section>
-    <article class="coments-left">
-        <h3 class="font-verde">Sobre o meu aprendizado</h3>
-        <p>O Curso tem proporcionado ótimas experiencias para mim e acredito que para todos os alunos da turma 9, estou impressionado com a qualidade de ensino e o suporte ao aluno que a trybe oferece e entrega, o fato de tratar com respeito questões ligadas a saúde fisica e mental dos alunos.
-        </p>
-    </article>
-    <aside class="coments-right">
-        <h3 class="font-verde">Uma passagem sobre meu aprendizado</h3>
-        <p class="font-verde"><em>"Durante este primeiro mes de aprendizado, tive ótimas experiencias, uma delas foi conhecer e poder conversar com outros alunos durante as salas reduzidas, onde conheci pessoas que me inspiraram a fazer mais pelo próximo"
-        </em></p>
-    </aside>
     <a href="https://www.betrybe.com/formacao" target="_blank">Faça o download do curriculo da nossa formação</a>
     <footer id="rodape">
         <p>Todos os direitos reservados, José Luiz Fagundes - Trybe</p>
