--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                     Lorem ipsum, dolor sit amet consectetur adipisicing elit. Reprehenderit quam libero quasi voluptatibus cupiditate eligendi quibusdam harum! Error eveniet perferendis et cumque aliquid facere necessitatibus nisi fuga ad, quaerat nam.
                 </aside>
             </section>
-            <section>
+            <section class='skills'>
                 <table>
                     <tr>
                         <th>
