adiciona ultimo requisito

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         </table>
     </section>
 
-    <article id="trybe">
+    <article id="trybe" class='lado-esquerdo'>
         <h2>Rotina de Estudos</h2>
         <p>A rotina de estudos na <a href="https://www.betrybe.com/" target="_blank">Trybe</a> é baseada na metodologia ativa de ensino, portanto me responsabilizo pelo meu aprendizado.
         </p>
@@ -88,7 +88,7 @@
         <p>Nos dias de projeto, realizo exercícios, projetos e desafios práticos.</p>
     </article>
 
-    <aside>
+    <aside class='lado-direito'>
         <h3>O aprendizado já começou no processo seletivo</h3>
         <p>Participar do processo seletivo da <a href="https://www.betrybe.com/" target="_blank">Trybe</a> foi uma experiência única e de muito aprendizado desde o começo, uma vez que nunca havia tido contato com programação ou desenvolvimento web.</p>
     </aside>
