--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         </table>
     </section>
 
-    <article id="trybe" class='lado-esquerdo'>
+    <article id="trybe">
         <h2>Rotina de Estudos</h2>
         <p>A rotina de estudos na <a href="https://www.betrybe.com/" target="_blank">Trybe</a> é baseada na metodologia ativa de ensino, portanto me responsabilizo pelo meu aprendizado.
         </p>
@@ -88,7 +88,7 @@
         <p>Nos dias de projeto, realizo exercícios, projetos e desafios práticos.</p>
     </article>
 
-    <aside class='lado-direito'>
+    <aside>
         <h3>O aprendizado já começou no processo seletivo</h3>
         <p>Participar do processo seletivo da <a href="https://www.betrybe.com/" target="_blank">Trybe</a> foi uma experiência única e de muito aprendizado desde o começo, uma vez que nunca havia tido contato com programação ou desenvolvimento web.</p>
     </aside>
@@ -96,6 +96,9 @@
     <section id="extra">
         <p>Através do curso introdutório (disponibilizado após a inscrição), pude aprender o básico sobre JS para realizar 3 desafios práticos propostos e seguir para a próxima etapa do processo, o teste de raciocínio lógico.</p>
     </section>
+
+    <div class= "lado-esquerdo"></div>
+    <div class= "lado-direito"></div>
 
     <section id="contato">
         <h3 id="linkedin"><a href="https://www.linkedin.com/in/analuizamsalgado/" target="_blank"><img src="linkedin.png" alt="Logo do LinkedIn" width=35
