--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
     <header id="cabecalho">
         <h1 id="titulo">Projeto Learned</h1>
     </header>
-    <img id="minha_foto" src="1606351976447.jpeg">
+    <img id="minha_foto" src="1606351976447.jpeg" alt="Minha foto">
 </body>
 </html>
