--- a/index.html
+++ b/index.html
@@ -11,5 +11,18 @@
         <h1 id="titulo">Projeto Learned</h1>
     </header>
     <img id="minha_foto" src="1606351976447.jpeg" alt="Minha foto">
+    <h1>Lições</h1>
+    <ul id="licoes_aprendidas">
+        <li>Unix</li>
+        <li>Git</li>
+        <li>GitHub</li>
+        <li>Empatia</li>
+        <li>HTML</li>
+        <li>CSS</li>
+        <li>Slack</li>
+        <li>Zoom</li>
+        <li>Semantic HTML</li>
+
+    </ul>
 </body>
 </html>
