--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
         <h1 id="titulo">Projeto Learned</h1>
     </header>
     <img id="minha_foto" src="1606351976447.jpeg" alt="Minha foto">
-    <h1>Lições</h1>
-    <ul id="licoes_aprendidas">
+    <h2>Lições aprendidas</h2>
+    <ol id="licoes_aprendidas">
         <li>Unix</li>
         <li>Git</li>
         <li>GitHub</li>
@@ -22,7 +22,19 @@
         <li>Slack</li>
         <li>Zoom</li>
         <li>Semantic HTML</li>
-
+    </ol>
+    <h2>Lições que ainda vou aprender</h2>
+    <ul>
+        <li>Java Script</li>
+        <li>DOM</li>
+        <li>Forms</li>
+        <li>CSS Responsive</li>
+        <li>ES6</li>
+        <li>HOF</li>
+        <li>Unit Tests</li>
+        <li>React</li>
+        <li>Node</li>
+        <li>SQL</li>
     </ul>
 </body>
 </html>
