--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         <li>Slack</li>
         <li>Zoom</li>
         <li>Semantic HTML</li>
+        <li>Inspect</li>
     </ol>
     <h2>Lições que ainda vou aprender</h2>
     <ul>
