--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <li>Inspect</li>
     </ol>
     <h2>Lições que ainda vou aprender</h2>
-    <ul>
+    <ul id="licoes_a_aprender">
         <li>Java Script</li>
         <li>DOM</li>
         <li>Forms</li>
