--- a/index.html
+++ b/index.html
@@ -37,5 +37,6 @@
         <li>Node</li>
         <li>SQL</li>
     </ul>
+    <footer id="rodape">Lições aprendidads na trybe</footer>
 </body>
 </html>
