--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <header id="cabecalho">
         <h1 id="titulo">Projeto Learned</h1>
     </header>
+    <nav id="link-externo">
+        <a href="https://www.betrybe.com/" target="_blanck">trybe</a>
+    </nav>
     <img id="minha_foto" src="1606351976447.jpeg" alt="Minha foto">
     <h2>Lições aprendidas</h2>
     <ol id="licoes_aprendidas">
@@ -37,6 +40,6 @@
         <li>Node</li>
         <li>SQL</li>
     </ul>
-    <footer id="rodape">Lições aprendidads na <a href="https://www.betrybe.com/" target="_blanck">trybe</a></footer>
+    <footer id="rodape">Lições aprendidads na trybe</footer>
 </body>
 </html>
