--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
     <header id="cabecalho">
         <h1 id="titulo">Projeto Learned</h1>
     </header>
+    <nav>
         <a href="https://www.betrybe.com/" target="_blanck">trybe</a>
+    </nav>    
     <img id="minha_foto" src="1606351976447.jpeg" alt="Minha foto">
     <h2>Lições aprendidas</h2>
     <ol id="licoes_aprendidas">
