--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
         <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. tware like Aldus PageMaker including versions of Lorem Ipsum.</p>
     </article>
     <aside>
+        <h2>Passagem sobre meu aprendizado na trybe</h2>
         <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a, making it look like readable English.</p>
     </aside>
     <footer id="rodape">Lições aprendidads na trybe</footer>
