--- a/index.html
+++ b/index.html
@@ -52,6 +52,17 @@
         <h2>Passagem sobre meu aprendizado na trybe</h2>
         <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a, making it look like readable English.</p>
     </aside>
+    <table id="tabela">
+      <tr>
+          <th>Aprendizado</th>
+      </tr>
+      <tr>
+          <td>HTML</td>
+          <td>CSS</td>
+          <td>Git</td>
+          <td>GitHub</td>
+      </tr>
+    </table>
     <footer id="rodape">Lições aprendidads na trybe</footer>
 </body>
 </html>
