--- a/index.html
+++ b/index.html
@@ -53,8 +53,9 @@
         <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a, making it look like readable English.</p>
     </aside>
     <table id="tabela">
+        <h3>Tabela de aprendizado</h3>
       <tr>
-          <th>Aprendizado</th>
+          <th colspan="4">Aprendizado</th>
       </tr>
       <tr>
           <td>HTML</td>
