--- a/index.html
+++ b/index.html
@@ -17,9 +17,12 @@
     <nav>
         <a href="https://www.facebook.com/pablo.iago.96/" target="_blanck">Pablo Iago</a>
     </nav>
+<div>
     <img id="minha_foto" src="1606351976447.jpeg" alt="Minha foto">
-    <h2>Lições aprendidas</h2>
-    <ol id="licoes_aprendidas">
+</div>
+<div id="licoes_aprendidas">
+   <h2>Lições aprendidas</h2>
+    <ol >
         <li>Unix</li>
         <li>Git</li>
         <li>GitHub</li>
@@ -31,8 +34,10 @@
         <li>Semantic HTML</li>
         <li>Inspect</li>
     </ol>
-    <h2>Lições que ainda vou aprender</h2>
-    <ul id="licoes_a_aprender">
+</div>
+<div id="licoes_a_aprender">
+    <h2>Lições a aprender</h2>
+    <ul>
         <li>Java Script</li>
         <li>DOM</li>
         <li>Forms</li>
@@ -44,12 +49,13 @@
         <li>Node</li>
         <li>SQL</li>
     </ul>
+</div>
     <article class="lado-direito">
         <h2>Meu Aprendizado</h2>
         <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. tware like Aldus PageMaker including versions of Lorem Ipsum.</p>
     </article>
     <aside class="lado-esquerdo">
-        <h2>Passagem sobre meu aprendizado na trybe</h2>
+        <h2>Passagem sobre aprendizado na trybe</h2>
         <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a, making it look like readable English.</p>
     </aside>
     <table id="tabela" >
