--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
 <div>
     <img id="minha_foto" src="1606351976447.jpeg" alt="Minha foto">
 </div>
-<div id="licoes_aprendidas">
+
    <h2>Lições aprendidas</h2>
-    <ol >
+    <ol id="laicoes_prendidas">
         <li>Unix</li>
         <li>Git</li>
         <li>GitHub</li>
@@ -34,10 +34,9 @@
         <li>Semantic HTML</li>
         <li>Inspect</li>
     </ol>
-</div>
-<div id="licoes_a_aprender">
+
     <h2>Lições a aprender</h2>
-    <ul>
+    <ul id="licoes_a_aprender">
         <li>Java Script</li>
         <li>DOM</li>
         <li>Forms</li>
