--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 </div>
 
    <h2>Lições aprendidas</h2>
-    <ol id="laicoes_prendidas">
+    <ol id="licoes_aprendidas">
         <li>Unix</li>
         <li>Git</li>
         <li>GitHub</li>
