--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </section>
     <img id="minha_foto" src="1606351976447.jpeg" alt="Minha foto">
     <nav>
-    <a href="https://www.facebook.com/pablo.iago.96/" target="_blanck">Pablo
+    <a href="https://www.facebook.com/pablo.iago.96/" target="_blank">Pablo
         Iago</a>
     </nav>
     <h2>Lições aprendidas</h2>
